force-app/main/default/objects/Configurazioni__c/fields/Attiva__c.field-meta.xml
<CustomField>
    <fullName>Attiva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attiva</label>
    <type>Checkbox</type>
</CustomField>