force-app/main/default/objects/Configurazioni__c/fields/Nome_Funzionalita__c.field-meta.xml
<CustomField>
    <fullName>Nome_Funzionalita__c</fullName>
    <label>Nome Funzionalità</label>
    <length>255</length>
    <type>Text</type>
</CustomField>